src/apps/snaya/hakaya-dev/service-hakaya.yml
apiVersion: v1
kind: Service
metadata:
  name: hakaya-dev
  namespace: hakaya-dev
spec:
  selector:
    app: hakaya-dev
  ports:
    - port: 80
      targetPort: 30000
